[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme-default.theme" type="Theme" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.231373, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.0
margin_top = -172.5
margin_right = 358.0
margin_bottom = 172.5
window_title = "Open a File"
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.0
margin_top = -172.5
margin_right = 358.0
margin_bottom = 172.5
window_title = "Save As File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 37.0
margin_bottom = 24.0
text = "File"
flat = false
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHelp" type="MenuButton" parent="."]
margin_left = 40.0
margin_top = 2.0
margin_right = 82.0
margin_bottom = 24.0
text = "Help"
flat = false
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -108.0
margin_right = 184.0
margin_bottom = 108.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutDialog"]
anchor_left = 0.022
anchor_top = 0.5
anchor_right = 0.978
anchor_bottom = 0.5
margin_left = -0.0960007
margin_top = 12.0
margin_right = 0.0959778
margin_bottom = 51.0
text = "Hello and welcome to may little text editor made with Godot"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AboutDialog"]
margin_left = 136.0
margin_right = 232.0
margin_bottom = 96.0
texture = ExtResource( 3 )
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
